fixed overflow on filter tabs

--- a/src/components/ObjectiveCardsFilter/style.css
+++ b/src/components/ObjectiveCardsFilter/style.css
@@ -1,12 +1,9 @@
-.objectives-status-filter {
-
-}
-
 .objectives-filter__inner {
     background-color: #cccccc;
     overflow: auto;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    overflow: hidden;
 }
 
 .objectives-status-filter__btn {
